output/65D3JE53HQSG6OL2B6.txt
src\Lock2.java:18: error: cannot find symbol
                ConcurrentUtils.sleep(1);
                ^
  symbol:   variable ConcurrentUtils
  location: class Lock2
src\Lock2.java:31: error: cannot find symbol
        ConcurrentUtils.stop(executor);
        ^
  symbol:   variable ConcurrentUtils
  location: class Lock2
2 errors
